# cmzf-redataprocessing

./: CB_commercial_rent_2023-01-03.gzip  CB_commercial_rent_2023-01-03_desc.gzip  CB_commercial_sale_2023-01-03.gzip  CB_commercial_sale_2023-01-03_desc.gzip  CB_landplots_sale_2023-01-03.gzip  CB_landplots_sale_2023-01-03_desc.gzip  EDA - Flats for sale.ipynb  Exploring our package.ipynb  L_description_download_async+decoding.ipynb  L_offers_download.ipynb  Prague_apartments_sale_2023-01-14.gzip  Prague_apartments_sale_2023-01-14_desc.gzip  README.md  SQLite exploration.ipynb  Use of our package - example.ipynb  description_decoding.py  description_download.ipynb  description_download_async.py  description_download_decoding_final.py  df.gzip  df_commercial_rent_2022-12-24.gzip  df_commercial_rent_2022-12-24_desc.gzip  df_garages_2022-12-22.gzip  df_garages_2022-12-22_desc.gzip  df_garages_rent_2023-01-03.gzip  df_garages_rent_2023-01-03_desc.gzip  df_garages_sale_2023-01-03.gzip  df_garages_sale_2023-01-03_desc.gzip  estate_data.sqlite  graph_db.ipynb  merging_cleaning.ipynb  offers_download.ipynb  offers_download_async.py  offers_download_final.py  re_data_processing.ipynb  sreality_api_dictionaries.py  test.py  trying_our_package.py
redataprocessing/: README.md  estate_data.sqlite  examples.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
redataprocessing/redataprocessing/: sreality.py  sreality_api_dictionaries.py  sreality_description_asyncio.py  (+1 more)
redataprocessing/redataprocessing.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+24 files in other folders)
