[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "redataprocessing"
version = "0.0.22"
authors = [
  { name="Vojtěch Kania", email="vojtech.kania@gmail.com" },
  { name="Lukáš Novotný", email="30702889@fsv.cuni.cz" }
]
description = "A package for download of real estate offers from Sreality.cz"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
"Homepage" = "https://github.com/vojtechkaniaedu/re_data_processing"