[metadata]
# This is required for any package to install with a name
name = redataprocessing

# we want to publish on PyPI then the following are also required
url = https://github.com/vojtechkaniaedu/re_data_processing
author = Vojtěch Kania, Lukáš Novotný
author_email = vojtech.kania@gmail.com, 30702889@fsv.cuni.cz
# This is useful but not required
version = 0.0.8

[options]
packages=find: